final submission, additional features

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,11 @@
 <resources>
-    <string name="app_name">ToDo</string>
-    <string name="add">add</string>
-    <string name="add_item">Add a new item</string>
-    <string name="item_description">item description</string>
+    <string name="app_name">adapter_example_2</string>
+    <string name="priority_prompt">Choose a priority</string>
 
+    <string-array name="priority_arrays">
+        <item>High</item>
+        <item>Medium</item>
+        <item>Low</item>
+    </string-array>
 
 </resources>
